--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.apurv</groupId>
     <artifactId>spring-boot-file-upload</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <version>1.0</version>
 
     <parent>
@@ -20,20 +20,125 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jackson.version>2.7.5</jackson.version>
 		<hibernate.version>4.3.1.Final</hibernate.version>
-		<java.version>1.8</java.version>
+		<java.version>1.7</java.version>
+		<spring.boot.version>1.4.3.RELEASE</spring.boot.version>
+    <start-class>com.jaycon.SpringBootWebApplication</start-class>
+
 	
     </properties>
 
     <dependencies>
+    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+    <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
+     <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+   	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-test</artifactId>
+        <version>${spring.boot.version}</version>
+        <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>com.sun.jersey</groupId>
+  			<artifactId>jersey-client</artifactId>
+		    <version>1.19</version>
+		</dependency>
+			<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart -->
+			<!-- https://mvnrepository.com/artifact/com.sun.jersey.contribs/jersey-multipart -->
+			<dependency>
+			    <groupId>com.sun.jersey.contribs</groupId>
+			    <artifactId>jersey-multipart</artifactId>
+			    <version>1.19.4</version>
+			</dependency>
+			<dependency>
+				  <groupId>com.fasterxml.jackson.jaxrs</groupId>
+				  <artifactId>jackson-jaxrs-json-provider</artifactId>
+				  <version>2.9.0</version>
+		    </dependency>
+        	 <dependency>
+	            <groupId>com.amazonaws</groupId>
+	            <artifactId>aws-java-sdk</artifactId>
+	            <version>1.11.95</version>
+        	</dependency>
+			<dependency>
+			    <groupId>org.glassfish.jersey.media</groupId>
+			    <artifactId>jersey-media-multipart</artifactId>
+			    <version>2.25.1</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.json/json -->
+			<!-- https://mvnrepository.com/artifact/org.json/json -->
+				<dependency>
+				    <groupId>org.json</groupId>
+				    <artifactId>json</artifactId>
+				    <version>20160810</version>
+				</dependency>
+<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+
+   <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-web</artifactId>
+		    <version>1.5.6.RELEASE</version>
+		</dependency>
+
+						
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-joda -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-joda</artifactId>
+		    <version>2.0.4</version>
+		</dependency>
+    <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common -->
+		<dependency>
+		    <groupId>org.glassfish.jersey.core</groupId>
+		    <artifactId>jersey-common</artifactId>
+		    <version>2.0-m11</version>
+		</dependency>
+    
+    	
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    
+    	<dependency>
+    		<groupId>com.stripe</groupId>
+    		<artifactId>stripe-java</artifactId>
+    		<version>4.2.0</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        
+		<dependency>
+    		<groupId>it.ozimov</groupId>
+    		<artifactId>spring-boot-email-core</artifactId>
+    		<version>0.5.0</version>
+		</dependency>
+ 		
  		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-         <dependency>
+         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
     		<groupId>mysql</groupId>
     		<artifactId>mysql-connector-java</artifactId>
     		<version>5.1.6</version>
 		</dependency>
+
 		<dependency>
     		<groupId>org.eclipse.persistence</groupId>
     		<artifactId>eclipselink</artifactId>
@@ -58,7 +163,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-
+		<!--  <dependency>
+		    <groupId>com.autodesk</groupId>
+		    <artifactId>com-autodesk-client</artifactId>
+		    <version>1.0.0</version>
+		</dependency>-->
         <!-- hot swapping, disable cache for template, enable live reload -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -66,12 +175,34 @@
             <optional>true</optional>
         </dependency>
 
+   		
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient</artifactId>
+    		<version>4.5.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+    		<groupId>commons-codec</groupId>
+    		<artifactId>commons-codec</artifactId>
+    		<version>1.10</version>
+		</dependency>
+		<dependency>
+	  		<groupId>com.stripe</groupId>
+	  		<artifactId>stripe-java</artifactId>
+	  		<version>5.4.0</version>
+		</dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>2.2.4</version>
         </dependency>
-
+        <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-tomcat</artifactId>
+    		<scope>provided</scope>
+		</dependency> 
     </dependencies>
 
     <build>
@@ -80,8 +211,58 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+			        <requiresUnpack>
+			                <dependency>
+			                        <groupId>com.sun.jersey</groupId>
+			                        <artifactId>jersey-server</artifactId>
+			                </dependency>
+			                <dependency>
+			                        <groupId>com.sun.jersey</groupId>
+			                        <artifactId>jersey-core</artifactId>
+			                </dependency>
+			                <dependency>
+			                        <groupId>com.sun.jersey</groupId>
+			                        <artifactId>jersey-servlet</artifactId>
+			                </dependency>
+			        </requiresUnpack>
+			    </configuration>
             </plugin>
+          
+            
+    <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+            <webResources>
+                <resource>
+                    <directory>src/main/ebextensions</directory>
+                    <targetPath>.ebextensions</targetPath>
+                    <filtering>true</filtering>
+                </resource>
+            </webResources>
+        </configuration>
+    </plugin>
+    
         </plugins>
+        
+        <!-- 
+        <resource>
+            <directory>${basedir}/src/main/resources</directory>
+            <filtering>true</filtering>
+            <includes>
+                <include>**/application*.yml</include>
+                <include>**/application*.properties</include>
+            </includes>
+        </resource>
+        <resource>
+            <directory>${basedir}/src/main/resources</directory>
+            <excludes>
+                <exclude>**/application*.yml</exclude>
+                <exclude>**/application*.properties</exclude>
+            </excludes>
+        </resource>
+    </resources>-->
     </build>
 
 </project>
